--- a/package.json
+++ b/package.json
@@ -6,14 +6,20 @@
     "storybook": "storybook dev -p 6006 --no-open",
     "build-storybook": "storybook build",
     "types:check": "tsc",
-    "lint": "pnpm eslint ./src ./content"
+    "lint": "pnpm eslint ./app ./content",
+    "test-ct": "playwright test -c playwright-ct.config.ts",
+    "dev:api": "tsx watch app/api-server/index.ts",
+    "build": "rm -rf dist && tsc -p tsconfig.server.json && storybook build -o ./dist/storybook-static",
+    "start": "NODE_ENV=production tsx dist/index.js"
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@hono/node-server": "^1.19.9",
     "@paralleldrive/cuid2": "^3.0.6",
     "@tabler/icons-react": "^3.36.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "hono": "^4.11.5",
     "lodash.throttle": "^4.1.1",
     "lru-cache": "^11.2.4",
     "msw": "^2.12.7",
@@ -27,6 +33,7 @@
     "@eslint-react/eslint-plugin": "^2.5.3",
     "@eslint/css": "^0.14.1",
     "@eslint/js": "^9.39.2",
+    "@playwright/experimental-ct-react": "^1.57.0",
     "@storybook/addon-themes": "^10.2.0",
     "@storybook/react-vite": "^10.1.11",
     "@tailwindcss/vite": "^4.1.18",
@@ -38,6 +45,7 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-storybook": "^10.1.11",
     "globals": "^17.0.0",
     "prettier": "^3.7.4",
