--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["app/**/*"],
+  "include": ["app/**/*", "globals.d.ts"],
   "compilerOptions": {
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "types": ["node", "vite/client"],
@@ -9,6 +9,7 @@
     "jsx": "react-jsx",
     "rootDirs": ["."],
     "baseUrl": ".",
+    "noEmit": true,
     /** enable this to allow path alias in .mdx */
     "allowJs": true,
     "paths": {
@@ -17,7 +18,6 @@
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true
