chroe: switch from csfNext to csf3

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
     /** enable this to allow path alias in .mdx */
     "allowJs": true,
     "paths": {
-      "~/*": ["./app/*"],
-      ".storybook": ["./.storybook/*"]
+      "~/*": ["./app/*"]
     },
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
