--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "storybook": "storybook dev -p 6006 --no-open",
+    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "types:check": "tsc",
     "lint": "pnpm eslint ./app",
     "test-ct": "playwright test -c playwright-ct.config.ts"
   },
   "dependencies": {
-    "@base-ui/react": "^1.0.0",
+    "@base-ui/react": "^1.1.0",
     "@paralleldrive/cuid2": "^3.0.6",
     "@tabler/icons-react": "^3.36.1",
     "class-variance-authority": "^0.7.1",
@@ -20,38 +20,43 @@
     "react-dom": "^19.2.3",
     "shadcn": "^3.7.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@eslint-react/eslint-plugin": "^2.5.3",
+    "@eslint-react/eslint-plugin": "^2.7.2",
     "@eslint/css": "^0.14.1",
     "@eslint/js": "^9.39.2",
-    "@playwright/experimental-ct-react": "^1.57.0",
+    "@playwright/experimental-ct-react": "^1.58.0",
+    "@storybook/addon-docs": "^10.2.0",
     "@storybook/addon-themes": "^10.2.0",
-    "@storybook/react-vite": "^10.1.11",
+    "@storybook/react-vite": "^10.2.0",
     "@tailwindcss/vite": "^4.1.18",
-    "@types/node": "^25.0.5",
-    "@types/react": "^19.2.7",
+    "@types/node": "^25.0.10",
+    "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-prettier": "^5.5.5",
     "eslint-plugin-react-hooks": "^7.0.1",
-    "eslint-plugin-storybook": "^10.1.11",
-    "globals": "^17.0.0",
-    "prettier": "^3.7.4",
+    "eslint-plugin-storybook": "^10.2.0",
+    "globals": "^17.1.0",
+    "prettier": "^3.8.1",
     "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
-    "storybook": "^10.1.11",
+    "storybook": "^10.2.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3",
-    "typescript-eslint": "^8.52.0",
+    "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
-    "vite-tsconfig-paths": "^6.0.4"
+    "vite-tsconfig-paths": "^6.0.4",
+    "vitest": "^4.0.18",
+    "playwright": "^1.58.0",
+    "@vitest/browser-playwright": "^4.0.18",
+    "@vitest/coverage-v8": "^4.0.18"
   },
   "packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
   "msw": {
