--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "msw": "^2.12.7",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-syntax-highlighter": "^16.1.0",
     "shadcn": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
@@ -34,6 +35,7 @@
     "@types/node": "^25.0.10",
     "@types/react": "^19.2.9",
     "@types/react-dom": "^19.2.3",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
@@ -41,6 +43,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-storybook": "^10.2.0",
     "globals": "^17.1.0",
+    "playwright": "^1.58.0",
     "prettier": "^3.8.1",
     "prettier-plugin-organize-imports": "^4.3.0",
     "prettier-plugin-tailwindcss": "^0.7.2",
@@ -52,8 +55,7 @@
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.53.1",
     "vite": "^7.3.1",
-    "vite-tsconfig-paths": "^6.0.4",
-    "playwright": "^1.58.0"
+    "vite-tsconfig-paths": "^6.0.4"
   },
   "packageManager": "pnpm@10.28.0+sha512.05df71d1421f21399e053fde567cea34d446fa02c76571441bfc1c7956e98e363088982d940465fd34480d4d90a0668bc12362f8aa88000a64e83d0b0e47be48",
   "msw": {
