--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons-react": "^3.36.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "focus-trap-react": "^11.0.6",
     "motion": "^12.29.0",
     "msw": "^2.12.7",
     "react": "^19.2.3",
