--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.1.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@floating-ui/react": "^0.27.17",
     "@monaco-editor/react": "4.8.0-rc.3",
     "@paralleldrive/cuid2": "^3.0.6",
@@ -25,7 +28,9 @@
     "react-syntax-highlighter": "^16.1.0",
     "shadcn": "^3.7.0",
     "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.6"
+    "use-zustand": "^0.2.0",
+    "zod": "^4.3.6",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^2.7.2",
